# midden

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  README.md  clippy.toml  docker-compose.postgres-minio.yml  docker-compose.sqlite.yml  docker-compose.yml  midden.example.toml
.github/workflows/: ci.yml  docker-publish.yml  docs.yml
docs/: backup-restore.md  book.toml  deployment.md  templates.md
docs/src/: SUMMARY.md  introduction.md
docs/src/api/: authentication-and-scopes.md  files.md  overview.md  pastes.md  reports-and-moderation.md  tokens.md
docs/src/contributor/: architecture.md  routing-and-templates.md  runtime-settings.md  tests-and-release.md  uploads-and-processing.md
docs/src/getting-started/: docker-compose.md  first-owner.md  installation.md  quick-start.md
docs/src/operator/: authentication.md  backup-and-restore.md  configuration.md  databases.md  delivery-and-cdn.md  environment-variables.md  jobs-and-maintenance.md  metrics-and-health.md  moderation.md  quotas-and-limits.md  scanning.md  security-policy.md  smtp.md  storage.md  troubleshooting.md
docs/src/user/: accounts-and-tokens.md  files.md  pastes.md  reports-claims-and-deletes.md
src/: app.rs  commands.rs  config.rs  db.rs  domain.rs  jobs.rs  mail.rs  main.rs  metrics.rs  policy.rs  processing.rs  quota.rs  rate_limit.rs  scanner.rs  storage.rs  templates.rs  util.rs  web.rs
src/config/: validation.rs
src/db/: auth.rs  blob_mutations.rs  items.rs  migrations.rs  models.rs  moderation.rs  mutations.rs  schema.rs  search.rs  settings.rs  upload_sessions.rs
src/web/: account.rs  admin.rs  api.rs  api_paths.rs  auth.rs  browse.rs  files.rs  items.rs  oidc.rs  openapi.rs  pastes.rs  support.rs  system.rs  tests.rs  tus.rs  upload.rs
static/: midden.css  midden.js
templates/: account.html  account_items.html  account_tokens.html  admin.html  admin_item.html  admin_jobs.html  admin_search.html  admin_users.html  admin_users_lists.html  base.html  browse.html  claim_form.html  csrf_field.html  delete_form.html  delete_result.html  docs.html  email_verified.html  error.html  file_preview.html  index.html  login.html  password_reset_form.html  password_reset_request.html  paste_edit.html  paste_new.html  paste_result.html  paste_show.html  register.html  report_form.html  reports.html  reports_table.html  resumable_upload.html  takedown.html  two_factor.html  upload_result.html  url_upload.html
tests/fixtures/: sample.gif.hex  sample.jpg.hex  sample.png.hex  sample.txt  unknown.bin.hex
