[package]
name = "midden"
version = "0.4.0"
edition = "2024"
license = "AGPL-3.0-only"
description = "A self-hostable Rust file and paste sharing service."

[workspace.lints.rust]
unsafe_code = "deny"
unreachable_pub = "warn"
unused_qualifications = "warn"
missing_debug_implementations = "warn"
rust_2018_idioms = { level = "warn", priority = -1 }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"

unwrap_used = "warn"
expect_used = "warn"
panic = "warn"

print_stdout = "warn"
print_stderr = "warn"

wildcard_imports = "warn"
enum_glob_use = "warn"

module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
similar_names = "allow"
too_many_lines = "allow"

cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"

multiple_crate_versions = "allow"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
async-trait = "0.1.88"
axum = { version = "0.8.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
bytes = "1.10.1"
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
config = { version = "0.15.11", default-features = false, features = ["toml"] }
futures-util = "0.3.31"
headers = "0.4.0"
html-escape = "0.2.13"
http = "1.3.1"
http-body-util = "0.1.3"
image = { version = "0.25", default-features = false, features = ["gif", "jpeg", "png"] }
lettre = { version = "0.11.22", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
mime = "0.3.17"
mime_guess = "2.0.5"
minijinja = { version = "2.20.0", features = ["loader", "json"] }
nanoid = "0.5.0"
object_store = { version = "0.13.2", features = ["aws"] }
openidconnect = "4.0.1"
prometheus-client = "0.24.1"
rand = "0.8.5"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "multipart", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
sqlx = { version = "0.9.0", default-features = false, features = ["runtime-tokio", "tls-rustls", "any", "sqlite", "postgres", "json", "chrono"] }
syntect = { version = "5.3.0", default-features = false, features = ["default-fancy"] }
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread", "fs", "signal", "process", "net", "time"] }
tower = "0.5.2"
tower-http = { version = "0.6.11", features = ["compression-full", "cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "json"] }
toml = "0.9.2"
url = "2.5.4"
uuid = { version = "1.17.0", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.20.0"
tower = { version = "0.5.2", features = ["util"] }
